<resources>
    <string name="app_name">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="def_value">-</string>
    <string name="please_enter_contact_first_name">Please enter contact first name</string>
    <string name="please_enter_contact_last_name">Please enter contact last name</string>
    <string name="please_enter_contact_phone_number">Please enter contact phone number</string>
    <string name="save_contact">Save contact</string>
    <string name="contact_info">Contact info</string>
    <string name="search">Search</string>
    <string name="image_for_contact">Image for contact</string>
</resources>