<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/box_fragment"
    android:padding="10dp"
    android:paddingLeft="40dp"
    tools:context=".presentation.ContactInfoFragment">

    <TextView
        android:id="@+id/tv_fragment_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_user_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/first_name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fragment_contact" />

    <TextView
        android:id="@+id/current_user_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/last_name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/current_user_first_name"
        app:layout_constraintStart_toStartOf="@+id/current_user_first_name"
        app:layout_constraintTop_toBottomOf="@+id/current_user_first_name" />

    <TextView
        android:id="@+id/current_user_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/phone_number"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/current_user_last_name"
        app:layout_constraintStart_toStartOf="@+id/current_user_first_name"
        app:layout_constraintTop_toBottomOf="@+id/current_user_last_name" />

    <EditText
        android:id="@+id/et_first_name_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="#333333"
        android:hint="@string/please_enter_contact_first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/current_user_phone_number"
        app:layout_constraintStart_toStartOf="@+id/current_user_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/current_user_phone_number" />

    <EditText
        android:id="@+id/et_last_name_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#333333"
        android:hint="@string/please_enter_contact_last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_first_name_contact"
        app:layout_constraintStart_toStartOf="@+id/et_first_name_contact"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name_contact" />

    <EditText
        android:id="@+id/et_phone_number_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#333333"
        android:hint="@string/please_enter_contact_phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/et_last_name_contact"
        app:layout_constraintStart_toStartOf="@+id/et_last_name_contact"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name_contact" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F84F4F"
        android:text="@string/save_contact"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number_contact" />

</androidx.constraintlayout.widget.ConstraintLayout>